# LightYears

./: CMakeLists.txt
LightYears/src/: main.cpp
LightYearsEngine/: CMakeLists.txt
LightYearsEngine/include/: Core.h  EntryPoint.h
LightYearsEngine/include/framework/: Actor.h  Application.h  AssetManager.h  MathUltility.h  Object.h  World.h
LightYearsEngine/src/: EntryPoint.cpp
LightYearsEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  MathUltility.cpp  Object.cpp  World.cpp
LightYearsGame/: CMakeLists.txt  config.h.in
LightYearsGame/include/: config.h
LightYearsGame/include/Spaceship/: Spaceship.h
LightYearsGame/include/gameFramework/: GameApplication.h
LightYearsGame/src/Spaceship/: Spaceship.cpp
LightYearsGame/src/gameFramework/: GameApplication.cpp
